--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -20,21 +20,54 @@
     header {
       background-color: #2c3e50;
       color: white;
+      position: relative;
       margin-bottom: 0;
+      padding-bottom: 0; 
+    }
+
+    .header-bar {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 12px 20px;
-      text-align: center;
     }
 
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
+      align-items: center;
+
     }
 
-    main {
-      padding: 30px 20px;
-      max-width: 1200px;
-      margin: auto;
+    .header-links {
+      display: flex;
+      gap: 20px;
     }
+
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    .full-width-section {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
+  background: #e0f7da;
+  padding: 60px 0;
+  text-align: center;
+  margin-top: 0 !important; 
+}
+
 
     h2 {
       margin-top: 40px;
@@ -42,49 +75,10 @@
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
     }
-
-    .map-container {
-      display: flex;
-      justify-content: space-around;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 20px;
-    }
-
-    .map-container iframe {
-      border: 2px solid #444;
-      border-radius: 8px;
-    }
-
-    .map-frame {
-      flex: 1 1 60%;
-      max-width: 850px;
-      height: 650px;
-    }
-
-    .qr-frame {
-      flex: 1 1 300px;
+    h1 {
       text-align: center;
     }
 
-    .qr-frame p {
-      font-size: 1.1em;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    @media (max-width: 768px) {
-      .map-container {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .map-frame, .qr-frame iframe {
-        width: 90% !important;
-        height: auto;
-      }
-    }
   </style>
 
   <script>
@@ -100,7 +94,8 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    function updateTableDisplays() {}
+    function updateTableDisplays() {
+   }
 
     function countVisitors(snapshot) {
       updateTableDisplays();
@@ -109,28 +104,39 @@
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
     };
   </script>
 </head>
 <body>
 
   <header>
-    <div class="header-title">店内表示</div>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">店内表示</div>
   </header>
 
-  <main>
-    <h2>店内マップ</h2>
-    <div class="map-container">
-      <!-- 店内マップ -->
-      <iframe class="map-frame" src="/app/system/map.html"></iframe>
+<main>
 
-      <!-- QRコード -->
-      <div class="qr-frame">
-        <p>受付はこのQRコードをお読みください</p>
-        <iframe src="/QR/waitQR.png" width="300" height="300"></iframe>
-      </div>
-    </div>
-  </main>
+    <h2>店内マップ</h2>
+    <h1>
+    <iframe src="/app/system/map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    <iframe src="/QR/waitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    </h1>
+
+</main>
+      <section style="padding: 20px;">
+
+  </section>
 
 </body>
 </html>
