--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -35,39 +35,7 @@
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
-      align-items: center;
-
     }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    .full-width-section {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-
-  background: #e0f7da;
-  padding: 60px 0;
-  text-align: center;
-  margin-top: 0 !important; 
-}
-
 
     h2 {
       margin-top: 40px;
@@ -75,24 +43,53 @@
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
     }
-    h1 {
-      text-align: center;
+
+    main {
+      padding: 30px 20px;
     }
-        .qr-frame {
-      flex: 1 1 300px;
+
+    .map-qr-container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+
+    .map-iframe {
+      border: 2px solid #444;
+      border-radius: 8px;
+      width: 1000px;
+      height: 700px;
+    }
+
+    .qr-section {
       text-align: center;
     }
 
-    .qr-frame p {
-      font-size: 1.1em;
-      margin-bottom: 10px;
+    .qr-section p {
+      font-size: 1.2em;
       font-weight: bold;
-    }
-    .map-frame, .qr-frame iframe {
-        width: 90% !important;
-        height: auto;
+      margin-bottom: 10px;
     }
 
+    .qr-iframe {
+      border: 2px solid #444;
+      border-radius: 8px;
+      width: 300px;
+      height: 300px;
+    }
+
+    @media (max-width: 900px) {
+      .map-iframe {
+        width: 90%;
+        height: auto;
+      }
+      .qr-iframe {
+        width: 80%;
+        height: auto;
+      }
+    }
   </style>
 
   <script>
@@ -108,8 +105,7 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    function updateTableDisplays() {
-   }
+    function updateTableDisplays() {}
 
     function countVisitors(snapshot) {
       updateTableDisplays();
@@ -118,42 +114,31 @@
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
-
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
     };
   </script>
 </head>
 <body>
 
   <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
     <div class="header-bar">
       <div class="header-title">店内表示</div>
+    </div>
   </header>
 
-<main>
+  <main>
+    <h2 style="text-align: center;">店内マップと受付QRコード</h2>
 
-    <h2>店内マップ</h2>
-    <h1>
-    <iframe src="/app/system/map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-      <div class="qr-frame">
+    <div class="map-qr-container">
+      <!-- 店内マップ -->
+      <iframe src="/app/system/map.html" class="map-iframe"></iframe>
+
+      <!-- QRコードと案内 -->
+      <div class="qr-section">
         <p>受付はこのQRコードをお読みください</p>
-        <iframe src="/QR/waitQR.png" width="300" height="300"></iframe>
+        <iframe src="/QR/waitQR.png" class="qr-iframe"></iframe>
       </div>
-    </h1>
-
-</main>
-      <section style="padding: 20px;">
-
-  </section>
+    </div>
+  </main>
 
 </body>
 </html>
