--- a/app/system/generate.html
+++ b/app/system/generate.html
@@ -183,7 +183,7 @@
   }
 
   const token = crypto.randomUUID();
-  const expiresAt = new Date(Date.now() + 2 * 60 * 1000); // 2分後
+  const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000); // 1日後
 
   await db.collection("qr_tokens").doc(token).set({
     table: table,
