--- a/app/system/map.html
+++ b/app/system/map.html
@@ -268,8 +268,12 @@
 
 
     
-    <!-- テーブル9（中央8名） -->
+    <!-- テーブル9（個別） -->
     <div class="table" style="top: 160px; left: 210px; width: 60px; height: 62px;" id="table9" data-table="9">9</div>
+    <div class="chair" style="top: 180px; left: 190px;" data-table="9"></div>
+
+    <!-- テーブル10（個別） -->
+    <div class="table" style="top: 220px; left: 210px; width: 60px; height: 62px;" id="table9" data-table="9">9</div>
     <div class="chair" style="top: 180px; left: 190px;" data-table="9"></div>
 
 
