--- a/app/system/generate.html
+++ b/app/system/generate.html
@@ -255,6 +255,12 @@
       <option value="7">テーブル 7</option>
       <option value="8">テーブル 8</option>
       <option value="9">テーブル 9</option>
+      <option value="10">テーブル 10</option>
+      <option value="11">テーブル 11</option>
+      <option value="12">テーブル 12</option>
+      <option value="13">テーブル 13</option>
+      <option value="14">テーブル 14</option>
+
     </select>
   </label>
   <button onclick="generateQR()">生成</button>
