--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -216,6 +216,7 @@
         if (data.type === "exit") exits++;
         if (data.type === "wait") waiting++;
 
+        const table = String(data.table);  
         if (tableCounts[table]) {
           if (data.type === "enter") {
             tableCounts[table].enter++;
