--- a/app/register/exit.html
+++ b/app/register/exit.html
@@ -58,6 +58,7 @@
           device
         });
         console.log("✅ 退店記録完了");
+        window.location.href = "coupon.html";
 
       } catch (error) {
         console.error("❌ 退店記録失敗:", error);
