--- a/app/register/coupon.html
+++ b/app/register/coupon.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>クーポン</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>クーポンページ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
@@ -22,89 +22,105 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    const deviceId = localStorage.getItem("deviceId") || navigator.userAgent;
-
     window.addEventListener("DOMContentLoaded", async () => {
-      // 🔐 URL直打ち防止
-      if (localStorage.getItem("exited") !== "true") {
-        alert("クーポンは退店後にのみ表示されます");
-        location.href = "index.html"; // または home へリダイレクト
+      const entered = localStorage.getItem("entered");
+      const exited = localStorage.getItem("exited");
+      const deviceId = localStorage.getItem("deviceId");
+
+      if (!(entered && exited && deviceId)) {
+        alert("このページには直接アクセスできません。");
+        window.location.href = "error.html";
         return;
       }
 
-      const docRef = doc(db, "coupons", deviceId);
-      const docSnap = await getDoc(docRef);
+      try {
+        const couponRef = doc(db, "coupons", deviceId);
+        const couponSnap = await getDoc(couponRef);
 
-      if (docSnap.exists()) {
-        const data = docSnap.data();
-        if (data.used) {
-          document.getElementById("status").textContent = "このクーポンはすでに使用済みです。";
-          document.getElementById("coupon-img").style.display = "none";
-          document.getElementById("use-btn").style.display = "none";
-        } else {
-          document.getElementById("status").textContent = "このクーポンは有効です。";
+        if (!couponSnap.exists()) {
+          document.getElementById("message").textContent = "クーポンは存在しません。";
+          document.getElementById("coupon").style.display = "none";
+          return;
         }
-      } else {
-        document.getElementById("status").textContent = "クーポン情報が見つかりません。";
-        document.getElementById("coupon-img").style.display = "none";
-        document.getElementById("use-btn").style.display = "none";
+
+        const coupon = couponSnap.data();
+        const used = coupon.used;
+
+        if (used) {
+          document.getElementById("message").textContent = "このクーポンは既に使用されています。";
+          document.getElementById("use-button").disabled = true;
+        } else {
+          document.getElementById("message").textContent = "🎉 ご来店ありがとうございます！クーポンをご利用ください。";
+          document.getElementById("use-button").addEventListener("click", async () => {
+            await updateDoc(couponRef, { used: true });
+            document.getElementById("message").textContent = "✅ クーポンを使用しました。";
+            document.getElementById("use-button").disabled = true;
+          });
+        }
+
+        document.getElementById("coupon").style.display = "block";
+      } catch (err) {
+        console.error("エラー:", err);
+        document.getElementById("message").textContent = "エラーが発生しました。";
       }
     });
-
-    async function markAsUsed() {
-      const confirmUse = confirm("このクーポンを使用済みにしますか？元に戻せません。");
-      if (!confirmUse) return;
-
-      const docRef = doc(db, "coupons", deviceId);
-      await updateDoc(docRef, { used: true });
-      alert("クーポンを使用済みにしました");
-      location.reload();
-    }
   </script>
+
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
       margin: 0;
       padding: 0;
-      text-align: center;
-      background: linear-gradient(to right, #fceabb, #f8b500);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      flex-direction: column;
       color: #333;
     }
+
+    #coupon {
+      background-color: white;
+      border-radius: 20px;
+      padding: 30px;
+      text-align: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      display: none;
+      max-width: 320px;
+    }
+
     h1 {
-      margin-top: 30px;
-      font-size: 2em;
+      margin-bottom: 10px;
+      font-size: 26px;
     }
-    #status {
-      margin: 20px 0;
-      font-size: 1.2em;
+
+    p {
+      margin: 10px 0;
     }
-    #coupon-img {
-      max-width: 90%;
-      margin: 20px auto;
-      border: 3px dashed #e67e22;
-      border-radius: 12px;
-      background: #fff;
-      padding: 10px;
-    }
-    button {
-      padding: 12px 24px;
-      background-color: #e67e22;
+
+    #use-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
       color: white;
       border: none;
-      font-size: 1em;
       border-radius: 8px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #cf711f;
+
+    #use-button:disabled {
+      background-color: gray;
+      cursor: not-allowed;
     }
   </style>
 </head>
 <body>
-  <h1>🎁 次回使えるクーポン</h1>
-  <div id="status">読み込み中...</div>
-  <img id="coupon-img" src="coupon.png" alt="クーポン画像">
-  <br>
-  <button id="use-btn" onclick="markAsUsed()">✅ このクーポンを使用する</button>
+  <div id="coupon">
+    <h1>🎁 次回使える10%OFFクーポン！</h1>
+    <p id="message">クーポンを取得中です...</p>
+    <button id="use-button">このクーポンを使う</button>
+  </div>
 </body>
 </html>
