--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -283,17 +283,42 @@
         const btnGroup = item.querySelector(".btn-group");
 
         if (data.status === "waiting") {
-          const btnEnter = document.createElement("button");
-          btnEnter.className = "btn-enter";
-          btnEnter.textContent = "入店通知";
-          btnEnter.onclick = () => {
-            db.collection("queue").doc(doc.id).update({
-              status: "entered",
-              enteredAt: new Date().toISOString()
-            });
-          };
-          btnGroup.appendChild(btnEnter);
+        const btnEnter = document.createElement("button");
+        btnEnter.className = "btn-enter";
+        btnEnter.textContent = "入店通知";
+        btnEnter.onclick = async () => {
+    const email = data.email;
+    if (email) {
+      try {
+        const res = await fetch("/app/wait/api/send-email", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            to: email,
+            subject: "順番になりました！",
+            message: `お客様の順番が来ましたのでご来店ください。\n5分以内に来店がない場合キャンセルとなります。`
+          })
+        });
+
+        if (!res.ok) {
+          console.error("メール送信失敗:", await res.text());
+        } else {
+          console.log("メール送信成功");
         }
+      } catch (error) {
+        console.error("送信エラー:", error);
+      }
+    }
+
+    db.collection("queue").doc(doc.id).update({
+      status: "entered",
+      enteredAt: new Date().toISOString()
+    });
+  };
+  btnGroup.appendChild(btnEnter);
+}
 
         if (data.status === "entered") {
           const btnConfirm = document.createElement("button");
