--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -290,7 +290,7 @@
     const email = data.email;
     if (email) {
       try {
-        const res = await fetch("/app/wait/api/send-email", {
+        const res = await fetch("/app/api/send-email", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
