--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -296,26 +296,30 @@ btnEnter.onclick = () => {
   if (email) {
     fetch("https://qr-webpage.vercel.app/api/send-email", {
   method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
+  headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
-    to: email, // Firestoreから取得したお客さんのメールアドレス
+    to: email,
     subject: "順番が来ました！",
     message: "お客様の順番になりました。店内へご案内できます。"
   })
 })
-.then(response => response.json())
-.then(data => {
-  if (data.success) {
-    alert("メールを送信しました！");
-  } else {
-    alert("メール送信失敗: " + data.error);
+.then(async response => {
+  const text = await response.text();
+  try {
+    const data = JSON.parse(text);
+    if (response.ok) {
+      alert("メールを送信しました！");
+    } else {
+      alert("メール送信失敗: " + (data.error || "不明なエラー"));
+    }
+  } catch (e) {
+    alert("通信エラー（JSONでない応答）: " + text);
   }
 })
 .catch(error => {
   alert("通信エラー: " + error.message);
 });
+
 
   }
 };
