--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -5,33 +5,31 @@
   <title>店外待ち管理（店員用）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Firebase -->
+  <!-- FirebaseとjQuery -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-
-  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- EmailJS SDK v4 via JSDelivr -->
-  <script type="module">
-    import emailjs from 'https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js';
-
-    emailjs.init('WvittRqWHcl7CD4At'); // ユーザーID（公開鍵）
-
-    window.sendEmail = function(email) {
+  <!-- EmailJS v4 SDK（安定版CDN） -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("WvittRqWHcl7CD4At"); // 公開鍵
+    })();
+    
+    function sendEmail(toEmail) {
       emailjs.send("service_0bg0xsl", "template_lr90jx9", {
-        to_email: email,
+        to_email: toEmail,
         message: "お客様の順番になりました。店内へご案内できます。",
         subject: "順番が来ました！"
-      })
-      .then(() => {
+      }).then(function(response) {
         alert("メールを送信しました！");
-      })
-      .catch((error) => {
+      }, function(error) {
         alert("メール送信失敗: " + error.text);
       });
-    };
+    }
   </script>
+
   <style>
     body {
       font-family: sans-serif;
@@ -146,7 +144,6 @@
     }
     .btn-enter { background: #2ecc71; color: white; }
     .btn-exit { background: #e74c3c; color: white; }
-
     #avg-times {
       text-align: center;
       margin: 20px auto;
@@ -159,7 +156,6 @@
       max-width: 600px;
       font-size: 1.1em;
     }
-
     table {
       width: 90%;
       margin: 20px auto;
@@ -219,91 +215,32 @@
     </table>
   </section>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-    function calculateAverages() {
-      const dayMap = ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"];
-      db.collection("logs").onSnapshot(snapshot => {
-        const logs = snapshot.docs.map(doc => doc.data());
-        logs.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
-        const sessions = {};
-        const durations = [];
-
-        const today = new Date();
-        const todayStr = today.toISOString().slice(0, 10);
-        const todayDurations = [];
-        const weekdayDurations = [];
-
-        logs.forEach(log => {
-          const key = log.device + "_" + log.table;
-          const time = new Date(log.timestamp);
-          if (log.type === "enter") {
-            sessions[key] = time;
-          } else if (log.type === "exit" && sessions[key]) {
-            const duration = (time - sessions[key]) / 1000;
-            if (duration > 0 && duration < 60 * 60 * 5) {
-              durations.push(duration);
-              const enterStr = sessions[key].toISOString().slice(0, 10);
-              const weekday = sessions[key].getDay();
-              if (enterStr === todayStr) todayDurations.push(duration);
-              if (weekday === today.getDay()) weekdayDurations.push(duration);
-            }
-            delete sessions[key];
-          }
-        });
-
-        function formatAvg(list) {
-          if (list.length === 0) return "データなし";
-          const avg = list.reduce((a, b) => a + b, 0) / list.length;
-          const m = Math.floor(avg / 60);
-          const s = Math.floor(avg % 60);
-          return `${m}分${s}秒（${list.length}名）`;
-        }
-
-        document.getElementById("avg-times").innerHTML = `
-          ✅ <strong>今日の平均滞在時間：</strong>${formatAvg(todayDurations)}<br>
-          📅 <strong>${dayMap[today.getDay()]}の平均滞在時間：</strong>${formatAvg(weekdayDurations)}<br>
-          📊 <strong>総合平均滞在時間：</strong>${formatAvg(durations)}
-        `;
-      });
-    }
-
-    function renderQueue() {
-      db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-        const ticketMap = {};
-        const allDocs = snapshot.docs;
-        const visibleDocs = allDocs.filter(doc => {
-          const status = doc.data().status;
-          return status === "waiting" || status === "entered";
-        });
-        const list = document.getElementById("queueList");
-        list.innerHTML = "";
-
-        allDocs.forEach((doc, index) => {
-          if (!(doc.id in ticketMap)) ticketMap[doc.id] = index + 1;
-        });
-
-        visibleDocs.forEach(doc => {
-          const data = doc.data();
+  function renderQueue() {
+    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+      const list = document.getElementById("queueList");
+      list.innerHTML = "";
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        if (data.status === "waiting" || data.status === "entered") {
           const item = document.createElement("div");
           item.className = "queue-item";
           item.innerHTML = `
-            <p><strong>番号札:</strong> ${ticketMap[doc.id]}</p>
             <p><strong>時刻:</strong> ${new Date(data.timestamp).toLocaleString("ja-JP")}</p>
             <p><strong>状態:</strong> ${data.status}</p>
             <div class="btn-group"></div>
           `;
-
           const btnGroup = item.querySelector(".btn-group");
 
           if (data.status === "waiting") {
@@ -315,11 +252,8 @@
                 status: "entered",
                 enteredAt: new Date().toISOString()
               });
-
               const email = data.email;
-              if (email) {
-                sendEmail(email); // 上で定義したwindow.sendEmail関数
-              }
+              if (email) sendEmail(email);
             };
             btnGroup.appendChild(btnEnter);
           }
@@ -344,50 +278,52 @@
           btnGroup.appendChild(btnCancel);
 
           list.appendChild(item);
-        });
+        }
       });
-    }
+    });
+  }
 
-    function renderHistoryQueue() {
-      db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-        const tbody = document.querySelector("#queueHistory tbody");
-        tbody.innerHTML = "";
-
-        snapshot.docs.forEach((doc, index) => {
-          const data = doc.data();
-          const status = data.status;
-
-          if (status === "confirmed" || status === "expired") {
-            const row = document.createElement("tr");
-            const enteredAt = data.enteredAt ? new Date(data.enteredAt) : null;
-            const timestamp = new Date(data.timestamp);
-
-            let waited = "不明";
-            if (enteredAt) {
-              const diff = enteredAt - timestamp;
-              const m = Math.floor(diff / 60000);
-              const s = Math.floor((diff % 60000) / 1000);
-              waited = `${m}分${s}秒`;
-            }
-
-            row.innerHTML = `
-              <td>${index + 1}</td>
-              <td>${timestamp.toLocaleString("ja-JP")}</td>
-              <td>${status}</td>
-              <td>${waited}</td>
-            `;
-            tbody.appendChild(row);
+  function renderHistoryQueue() {
+    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+      const tbody = document.querySelector("#queueHistory tbody");
+      tbody.innerHTML = "";
+      snapshot.forEach((doc, index) => {
+        const data = doc.data();
+        if (["confirmed", "expired"].includes(data.status)) {
+          const row = document.createElement("tr");
+          const enteredAt = data.enteredAt ? new Date(data.enteredAt) : null;
+          const timestamp = new Date(data.timestamp);
+          let waited = "不明";
+          if (enteredAt) {
+            const diff = enteredAt - timestamp;
+            const m = Math.floor(diff / 60000);
+            const s = Math.floor((diff % 60000) / 1000);
+            waited = `${m}分${s}秒`;
           }
-        });
+          row.innerHTML = `
+            <td>${index + 1}</td>
+            <td>${timestamp.toLocaleString("ja-JP")}</td>
+            <td>${data.status}</td>
+            <td>${waited}</td>
+          `;
+          tbody.appendChild(row);
+        }
       });
-    }
+    });
+  }
 
-    window.onload = () => {
-      document.getElementById("mainTitle").style.display = "block";
-      renderQueue();
-      renderHistoryQueue();
-      calculateAverages();
-    };
-  </script>
+  window.onload = () => {
+    document.getElementById("mainTitle").style.display = "block";
+    renderQueue();
+    renderHistoryQueue();
+  };
+
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelector('.menu-button').addEventListener('click', () => {
+      document.querySelector('.drawer').classList.toggle('open');
+    });
+  });
+</script>
+
 </body>
 </html>
